# sna-s2s

./: .gitignore  README.md  package.json
ops/livekit/: .env.example  compose.yml
s2s.client/: components.json  package.json  vite.config.ts
s2s.client/src/: styles.css
s2s.client/src/components/: s2s-panel.tsx  shader-orb.tsx  voice-input.tsx
s2s.client/src/components/ui/: dialog.tsx  prompt-input.tsx  text-shimmer.tsx
s2s.client/src/lib/actions/: asr.ts  livekit.ts  s2s-reset.ts  s2s.ts  tts.ts
s2s.client/src/routes/: __root.tsx  index.tsx
s2s.server/: .env  .gitignore  README.md  asr.py  generate_intro_audio.py  live_probe.py  live_s2s.py  livekit_chain.py  llm.py  main.py  pyproject.toml  remote_speech.py  test_w2v_bert_asr.py  tts.py
